[package]
name = "supercow"
version = "0.1.0"
authors = ["Jason Lingle"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/altsysrq/reflike"
homepage = "https://github.com/altsysrq/reflike"
# TODO Doc link
keywords = ["ref", "borrow", "generic", "cow"]

description = """
A generic way to accept general reference-like values without proliferating
generics.
"""

[dependencies]
